--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 
         <form class="login " action="">
             <div>
-                <label for="">Usuario</label>
+                <label for="">Usuário</label>
                 <input type="text" id="username" class="submit_text"/>
             </div>
             <br>
