--- a/panel.html
+++ b/panel.html
@@ -26,9 +26,18 @@
 
         <div>
             <h3>Gerada automaticamente?</h3> 
+            <input class="checkboxes" type="radio">Sim
+            <input class="checkboxes" type="radio" checked>Não
         </div>
         
         <h3>Possui sem parar?</h3>
+        <input class="checkboxes" type="radio">Sim
+        <input class="checkboxes" type="radio" checked>Não
+
+        <div>
+            <input class="checkboxes" type="radio" checked>Carro
+            <input class="checkboxes" type="radio">Moto
+        </div>
 
         <button id="btn_entrance" onclick="entrance()">Entrada de veículo</button>
 
@@ -38,7 +47,7 @@
 
         <h1>Placa do veículo</h1>
         <input />
-        <div class="teste"
+        <div class="teste">
         <button id="btn_exit" onclick="exit()">Saída de veículo</button>
         </div>
         <div class="panel">
