Método de Pagamento layout V.1

--- a/pagamento/metodo_pagamento.html
+++ b/pagamento/metodo_pagamento.html
@@ -14,8 +14,17 @@
         <h2>Escolha o metodo de Pagamento</h2>
     </header>
 
-    <div>
-        <h1>RS$</h1>
+    <!-- Valor a ser pago -->
+    <div class="valor"> R$ {{ valor }} </div>
+
+    <!-- Seleção do método de pagamento -->
+    <div class="wrapper">
+        
+        <div onclick="window.location.href='../home.html'">Pix</div>
+        <div onclick="window.location.href='../home.html'">Cartão de Crédito</div>
+        <div onclick="window.location.href='../home.html'">Dinheiro</div>
+        <div onclick="window.location.href='../home.html'">Catão de Débito</div>
+
     </div>
 
     
