tela de pagamento realizado

--- a/pagamento/pagamento_realizado.html
+++ b/pagamento/pagamento_realizado.html
@@ -8,6 +8,14 @@
 <body>
     <header class="header_logo">
       <h1>Shopping X</h1>
-      <h2>Pagamento de Estacionamento</h2>
+      <h1>Pagamento de Estacionamento</h1>
 
     </header>
+    <div>
+    <img src='check.png'
+     height="160px" id="imgpos">
+     <p style="margin-top:410px;margin-left: 670px; color:white; font-size: 40px;">Pagamento realizado com sucesso</p>
+     <p style="margin-top:70px;margin-left: 560px;color:white;font-size: 40px;">Sua saída está liberada nos próximo 20 minutos!</p>
+     <p style="margin-left: 720px; color:white;font-size: 40px;margin-top: -20px">Não exceda o tempo limite.</p>
+
+</body>
