--- a/pagamento/metodo_pagamento.html
+++ b/pagamento/metodo_pagamento.html
@@ -6,7 +6,6 @@
     <title>Pagamento</title>
 </head>
 <body>
-
     <header class="header_logo">
         <h2>Shopping X</h2>
         <h2>Pagamento de Estacionamento</h2>
@@ -23,7 +22,7 @@
         <div onclick="window.location.href='../home.html'">Pix</div>
         <div onclick="window.location.href='../home.html'">Cartão de Crédito</div>
         <div onclick="window.location.href='../home.html'">Dinheiro</div>
-        <div onclick="window.location.href='../home.html'">Catão de Débito</div>
+        <div onclick="window.location.href='../home.html'">Cartão de Débito</div>
 
     </div>
 
