--- a/pagamento/inserir_placa.html
+++ b/pagamento/inserir_placa.html
@@ -3,17 +3,18 @@
         <title>Página de Pagamento</title>
         <meta charset="UTF-8">
         <link rel='stylesheet' href="inserir_placa.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kanit">
     </head>
     <body>
         <header class="header_logo">
-            <h1>Shopping X</h2>
+            <h1 class="header_title">SHOPPING X</h1>
             <h2>Pagamento de Estacionamento</h2>
             <h2>Insira sua placa</h2>
         </header>
         <div id="img_input">
-            <input id="placa" class="submit_text" maxlength="8"/>
+            <input id="placa" class="submit_text" maxlength="7"/>
         </div>
-        <button class="button" id="btn_payment" onclick="window.location.href='/pagamento/metodo_pagamento.html'">Clique aqui para pagar</button>
+        <button class="button btn_payment" id="btn_payment" onclick="window.location.href='/pagamento/metodo_pagamento.html'">PAGAR</button>
 
     </body>
 </html>
