--- a/pagamento/metodo_pagamento.html
+++ b/pagamento/metodo_pagamento.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header class="header_logo">
-        <h2>Shopping X</h2>
+        <h2 class="header_title">Shopping X</h2>
         <h2>Pagamento de Estacionamento</h2>
         <br>
         <h2>Escolha o metodo de Pagamento</h2>
