Metodo Pix added

--- a/pagamento/metodo_pagamento.html
+++ b/pagamento/metodo_pagamento.html
@@ -19,7 +19,7 @@
     <!-- Seleção do método de pagamento -->
     <div class="wrapper">
         
-        <div onclick="window.location.href='../home.html'">Pix</div>
+        <div onclick="window.location.href='./metodos/pix.html'">Pix</div>
         <div onclick="window.location.href='../home.html'">Cartão de Crédito</div>
         <div onclick="window.location.href='../home.html'">Dinheiro</div>
         <div onclick="window.location.href='../home.html'">Cartão de Débito</div>
