corrigi os errinhos

--- a/pagamento/metodo_pagamento.html
+++ b/pagamento/metodo_pagamento.html
@@ -20,9 +20,9 @@
     <div class="wrapper">
         
         <div onclick="window.location.href='./metodos/pix.html'">Pix</div>
-        <div onclick="window.location.href='../home.html'">Cartão de Crédito</div>
-        <div onclick="window.location.href='../home.html'">Dinheiro</div>
-        <div onclick="window.location.href='../home.html'">Cartão de Débito</div>
+        <div onclick="window.location.href='./metodos/cartão_crédito.html'">Cartão de Crédito</div>
+        <div onclick="window.location.href='./metodos/dinheiro.html'">Dinheiro</div>
+        <div onclick="window.location.href='./metodos/cartão_debito.html'">Cartão de Débito</div>
 
     </div>
 
