--- a/pagamento/placa_negada.html
+++ b/pagamento/placa_negada.html
@@ -12,9 +12,7 @@
 
     </header>
     <div>
-    <img src='x.png'
-     height="160px" id="imgpos">
+    <img src='../images/x.png' height="160px" id="imgpos">
      <p style="margin-top:470px;margin-left: 770px; color:white; font-size: 40px;">Placa não encontrada</p>
      <p style="margin-top:60px;margin-left: 720px;color:white;font-size: 40px;">Por favor, tente novamente.</p>
-
 </body>
