--- a/pagamento/metodos/pix.html
+++ b/pagamento/metodos/pix.html
@@ -17,9 +17,9 @@
         </div>
     </header>
 
-    <div class="teste" onclick="window.location.href='./qrcode.html'">
-        <div class="qr_code" id="qrcode"></div>
-        <div class="cancelar" onclick="window.location.href='../inserir_placa.html'">Cancelar</div> 
+    <div class="teste">
+        <div class="qr_code" id="qrcode" onclick="window.location.href='./qrcode.html'"></div>
+        <div class="cancelar" onclick="window.location.href='../metodo_pagamento.html'">Cancelar</div> 
     </div>
 
     <!--                                                                             espacamento                                                                  -->
