--- a/pagamento/metodos/cartão_debito.html
+++ b/pagamento/metodos/cartão_debito.html
@@ -17,7 +17,7 @@
       </header>
 
       <div class="imgpos">
-          <img src="/images/image-asset.png">
+          <img src="../../images/image-asset.png">
       </div>
       <div class="cancel" onclick="window.location.href='../metodo_pagamento.html'">Cancelar</div> 
 </body>
