--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
         async function validate(){
             const operators = await getFromDatabse();            
             
-            console.log( operators );
+            //console.log( operators );
 
             //var alloperators = app.selectAllOperators();
             //alloperators.then( function(result) {
