--- a/panel.html
+++ b/panel.html
@@ -6,8 +6,33 @@
 </head>
 <body class="row" onload="populate_table()"><!--/body> onload="populate_table()">-->
     <script src="testeregex.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     
     <script >
+        async function insertRegister(id, license, entrance_type) {
+            var res;
+            await axios.put('http://localhost:3000/register',  { params: {id: id, license: license, entrance_type: entrance_type} })
+                .then(response => { res = response.data;} )
+                .catch(error => console.log(error));
+            return res;
+        }
+
+        async function updateRegister(license) {
+            var res;
+            await axios.patch('http://localhost:3000/register',  { params: {exit_time: exit_time, license: license, entrance_time: entrance_time} })
+                .then(response => { res = response.data;} )
+                .catch(error => console.log(error));
+            return res;
+        }
+
+        async function getActiveRegisters() {
+            var date_now = new Date();
+            var res;
+            await axios.get('http://localhost:3000/registers', { params: {timestamp: date_now} })
+                .then(response => { res = response.data;} )
+                .catch(error => console.log(error));
+            return res;
+        }
 
         function get_total_a_pagar (tempo, vip) {
             var taxa_vip = 4;
