--- a/pagamento/metodo_pagamento.html
+++ b/pagamento/metodo_pagamento.html
@@ -5,7 +5,41 @@
     <link rel="stylesheet" href="metodo_pagamento.css">
     <title>Pagamento</title>
 </head>
-<body>
+<body onload="showPaymentValue()">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+    <script>
+        async function getPaymentValue ( entrance_id ) {
+            var res;
+            await axios.get('http://localhost:3000/payment',  { params: {entrance_id: entrance_id} })
+                .then(response => { res = response.data;} )
+                .catch(error => console.log(error));
+            return res;
+        }
+        var already_searched = 0;
+
+        async function showPaymentValue () {
+            if (already_searched == 0) {
+                already_searched = 1;
+                var sPageURL = window.location.search.substring(1),
+                sURLVariables = sPageURL.split('='),
+                sParameterName,
+                i;
+                //alert(sURLVariables[1]);  
+                payment_value = await getPaymentValue( sURLVariables[1] );
+                document.getElementById("payment_value").innerHTML = "R$ " + payment_value;
+                if (!payment_value && payment_value != 'Response is undefined') {
+                    if (payment_value == 'query send no rows')
+                        alert("Registro com placa fornecida não foi encontrado")
+                    else
+                        document.getElementById("payment_value").innerHTML = "R$ " + payment_value;
+                }
+                else {
+                    alert("Erro ao buscar registro")
+                    document.getElementById("payment_value").innerHTML = "R$ 5,99";
+                }
+            }
+        }
+    </script>
     <header class="header_logo">
         <h2 class="header_title">Shopping X</h2>
         <h2>Pagamento de Estacionamento</h2>
@@ -14,7 +48,7 @@
     </header>
 
     <!-- Valor a ser pago -->
-    <div class="valor"> R$ {{ valor }} </div>
+    <div id="payment_value" class="valor"> R$ {{ valor }} </div>
 
     <!-- Seleção do método de pagamento -->
     <div class="wrapper">
