--- a/pagamento/metodos/pix.html
+++ b/pagamento/metodos/pix.html
@@ -6,7 +6,17 @@
     <title>Pagamento com Pix</title>
 </head>
 <body>
-
+    <script>
+        function redirect() {
+            var sPageURL = window.location.search.substring(1),
+                sURLVariables = sPageURL.split('='),
+                sParameterName,
+                i;
+                //alert(sURLVariables[1]);  
+            var entrance_id = sURLVariables[1];
+            window.location.href='/pagamento/metodo_pagamento.html?id='+entrance_id;
+        }
+    </script>
     
     <header class="header_logo">
         <h2 class="header_title">Shopping X</h2>
@@ -19,7 +29,7 @@
 
     <div class="teste">
         <div class="qr_code" id="qrcode" onclick="window.location.href='./qrcode.html'"></div>
-        <div class="cancelar" onclick="window.location.href='../metodo_pagamento.html'">Cancelar</div> 
+        <div class="cancelar" onclick="redirect()">Cancelar</div> 
     </div>
 
     <!--                                                                             espacamento                                                                  -->
