auto redirect para/na tela de pagamento, e mudança de fontes para ficar no padrão

--- a/pagamento/metodo_pagamento.html
+++ b/pagamento/metodo_pagamento.html
@@ -50,10 +50,9 @@
         }
     </script>
     <header class="header_logo">
-        <h2 class="header_title">Shopping X</h2>
-        <h2>Pagamento de Estacionamento</h2>
-        <br>
-        <h2>Escolha o metodo de Pagamento</h2>
+        <h1 class="header_title">SHOPPING X</h1>
+        <h2 style="margin-top: -20px; font-size: 25px;">Pagamento de Estacionamento</h2>
+        <h2>Escolha o método de Pagamento</h2>
     </header>
 
     <!-- Valor a ser pago -->
