--- a/pagamento/metodos/cartão_crédito.html
+++ b/pagamento/metodos/cartão_crédito.html
@@ -18,16 +18,16 @@
         }
     </script>
     <header class="header_logo">
-      <h2 class="header_title">Shopping X</h1>
+      <h2 class="header_title">SHOPPING X</h1>
       <h2>Pagamento de Estacionamento</h1>
-      <h2>Cartao de credito</h1>
+      <h2>Cartão de crédito</h1>
     <br>
       <div class="cartao_text">
-          <h2>Insira seu cartao e siga as instrucoes no visor da maquininha. </h2>
+          <h2>Insira seu cartão e siga as instruções no visor da maquininha. </h2>
       </div>
       </header>
 
-      <div class="imgpos">
+      <div class="imgpos" onclick="window.location.href='../pagamento_realizado.html'">
           <img src="../../images/image-asset.png">
       </div>
       <div class="cancel" onclick="redirect()">Cancelar</div> 
