--- a/pagamento/metodos/dinheiro.html
+++ b/pagamento/metodos/dinheiro.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="10;/pagamento/pagamento_realizado.html" />
     <link rel="stylesheet" href="dinheiro.css">
     <title>Pagamento com dinheiro</title>
 </head>
@@ -18,11 +19,11 @@
         }
     </script>
     <header class="header_logo">
-      <h2 class="header_title">Shopping X</h1>
+      <h2 class="header_title">SHOPPING X</h1>
       <h2>Pagamento de Estacionamento</h1>
       <h2>Dinheiro</h1>
     <br>
-    <div class="dinheiro_text">
+    <div class="dinheiro_text" >
         <h2>Insira o dinheiro trocado.</h2>
     </div>
     </header>
