--- a/pagamento/pagamento_realizado.html
+++ b/pagamento/pagamento_realizado.html
@@ -2,18 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="7;/pagamento/inserir_placa.html" />
     <link rel="stylesheet" href="pagamento_realizado.css">
     <title>Pagamento</title>
 </head>
 <body>
-    <header class="header_logo">
-      <h1>Shopping X</h1>
-      <h1>Pagamento de Estacionamento</h1>
+  <header class="header_logo">
+    <h1 class="header_title">SHOPPING X</h1>
+    <h2>Pagamento de Estacionamento</h2>
+  </header>
+  <div class="txt">
+    <p style="margin-top:410px;margin-left: 670px; color:white; font-size: 40px;">Pagamento realizado com sucesso</p>
+    <img src='/images/check.png'height="170px" id="imgpos">
+    <p style="margin-top:70px;margin-left: 560px;color:white;font-size: 40px;">Sua saída está liberada nos próximo 20 minutos!</p>
+    <p style="margin-left: 720px; color:white;font-size: 40px;margin-top: -20px">Não exceda o tempo limite.</p>
+    <p style="margin-left: 705px; color:white;font-size: 25px;margin-top: 90px">Redirecionamento automático em 5 segundos.</p>
+  </div>
 
-    </header>
-    <img src='/images/check.png'height="160px" id="imgpos">
-     <p style="margin-top:410px;margin-left: 670px; color:white; font-size: 40px;">Pagamento realizado com sucesso</p>
-     <p style="margin-top:70px;margin-left: 560px;color:white;font-size: 40px;">Sua saída está liberada nos próximo 20 minutos!</p>
-     <p style="margin-left: 720px; color:white;font-size: 40px;margin-top: -20px">Não exceda o tempo limite.</p>
 
 </body>
