--- a/pagamento/metodos/pix.html
+++ b/pagamento/metodos/pix.html
@@ -19,11 +19,11 @@
     </script>
     
     <header class="header_logo">
-        <h2 class="header_title">Shopping X</h2>
+        <h2 class="header_title">SHOPPING X</h2>
         <h2>Pagamento de Estacionamento</h2>
         <br>
         <div class="pix_container">
-            <h2>Abra o aplicativo do seu banco pelo smartphone, siga ate a opcao PIX e escolha o “pagamento por QR Code”, e posicione o celular em frente ao codigo para leitura.</h2>
+            <h2>Abra o aplicativo do seu banco pelo smartphone, siga até a opção PIX e escolha o “pagamento por QR Code”, então posicione o celular em frente ao codigo para leitura.</h2>
         </div>
     </header>
 
@@ -37,7 +37,7 @@
         <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs@master/qrcode.js"></script>
         <script type="text/javascript">
             var qrcode = new QRCode(document.getElementById("qrcode"), {
-                text: "colocar codigo pix aqui pro andre pagar sem perceber",
+                text: "colocar codigo pix",
                 width: 256,
                 height: 256,
                 colorDark : "#000",
