--- a/pagamento/inserir_placa.html
+++ b/pagamento/inserir_placa.html
@@ -20,7 +20,7 @@
             <h2>Insira sua placa</h2>
         </header>
         <div id="img_input">
-            <input id="placa" class="submit_text" maxlength="7"/>
+            <input id="placa" class="submit_text" maxlength="7" autocomplete="off"/>
         </div>
         <button class="button btn_payment" id="btn_payment" onclick="redirect()">PAGAR</button>
 
