--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     
     <body>
 
+        <header class="header">Login</header>
         <form class="login " action="">
             <div>
                 <label for="">Usuário</label>
@@ -18,7 +19,7 @@
                 <input type="password" id="password" class="submit_text" />
             </div>
             <br>
-            <input type="button" class="button1" onclick={validate()} value="Login"/>
+            <input type="button" class="button1 buttonlogin" onclick={validate()} value="Login"/>
             <input type="button" class="button1" onclick={register()} value="Cadastro"/>
         </form>
 
