--- a/panel.html
+++ b/panel.html
@@ -338,7 +338,6 @@
 
     </aside>
 
-
     <table id="my_table" class="column">
         <tr>
             <th>#</th>
@@ -347,7 +346,7 @@
             <th>Entrada</th>
             <th>Pagamento</th>
             <th>Total a pagar</th>
-            <th>Tipo</th>
+            <th>SemParar</th>
         </tr>
         <!--<tbody id="my_table_tbody">
             <tr></tr>
@@ -355,6 +354,7 @@
         </tbody>-->
     </table>
 
-    <button id="btnCalcularSalario" onclick="showPaymentValue()">Calcular salario</button>
+    <button class="round_font" id="btnCalcularSalario" onclick="showPaymentValue()">Calcular pagamento</button>
+
 </body>
 </html>
