--- a/panel.html
+++ b/panel.html
@@ -172,11 +172,12 @@
                     for (var i = 1; i < numberRows; i++) {
                         var value_to_pay =  await getTotalAPagar(table.rows[i].cells[0].innerHTML);
                         if (value_to_pay == 'query send no rows') { 
-                            value_to_pay =  calculaValorAPagar(0, table.rows[i].cells[2].innerHTML)
-                            console.log(value_to_pay.split(2))
-                            alert(table.rows[i].cells[0].innerHTML + " " + value_to_pay + " " + table.rows[i].cells[5].innerHTML)
+                            console.log(value_to_pay)
+                            value_to_pay =  calculaValorAPagar(0, table.rows[i].cells[2].innerHTML).toString().substring(2,7).replace(',', '.')
+                            console.log(value_to_pay)
+                            //alert(table.rows[i].cells[0].innerHTML + " " + value_to_pay + " " + table.rows[i].cells[5].innerHTML)
                             var result = await insertPayment(uuid(), table.rows[i].cells[0].innerHTML, value_to_pay, table.rows[i].cells[5].innerHTML )
-                            alert("Meu result " + result)
+                            //alert("Meu result " + result)
                         }
                         table.rows[i].cells[4].innerHTML = "R$ " + (value_to_pay[0][3]).toString().substring(0,5);
                     }
