--- a/pagamento/pagamento_realizado.html
+++ b/pagamento/pagamento_realizado.html
@@ -7,6 +7,8 @@
     <title>Pagamento</title>
 </head>
 <body>
+  <script>
+  </script>
   <header class="header_logo">
     <h1 class="header_title">SHOPPING X</h1>
     <h2>Pagamento de Estacionamento</h2>
