--- a/panel.html
+++ b/panel.html
@@ -441,7 +441,7 @@
         </tr>
         <th>     
             <td>
-                <button id="btn-calcular-spots" class="btn-table" onclick="getCount()">calcular</button>
+                <button id="btn-calcular-spots" class="btn-table" onclick="getCount()">Calcular</button>
             </td>
         </th>
     </table>
